--- a/index.html
+++ b/index.html
@@ -85,6 +85,31 @@
           </div>
         </div>
       </section>
+        <section class="services" id="services">
+        <div class="section__content container">
+          <h2 class="section__title section__title--black">Meus trabalhos</h2>
+
+          <div class="services__cards">
+            <div class="services__card">
+                           <img src="rafa.png" height="50%" width="100%"/>
+              <h3 class="services__card-title">Back End</h3>
+              <p class="services__card-description"> Gosto de construir a estrutura lógica e funcional de uma web-site.</p>
+            </div>
+
+            <div class="services__card">
+              <img src="rafa.png" height="50%" width="100%"/>
+              <h3 class="services__card-title">Front End</h3>
+              <p class="services__card-description">Três linguagens de programação que gosto é html, css, main.js.</p>
+            </div>
+
+            <div class="services__card">
+              <img src="rafa.png" height="50%" width="100%"/>
+              <h3 class="services__card-title">Técnico de Informática</h3>
+              <p class="services__card-description">Trabalho com formatação, upgrade de hd para ssd entre outros serviços.</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section class="about" id="about">
         <div class="section__content container">
@@ -153,15 +178,6 @@
               <div class="social-media__icon">
                 <a href="https://github.com/professor-rafael"><i class="fa-brands fa-github"></i></a>
               </div>
-
-              <audio controls>
-                <source src="ras.mp3" type="audio/mp3">
-                <source src="ras.wav" type="audio/wav">
-                <source src="ras.ogg" type="audio/ogg">
-              </audio>
-
-            </div>
-          </div>
 
           <div class="contact__form">
             <p>Se quiser trabalhar comigo em algum projeto, é só me enviar mensagem!</p>
