--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
         </div>
  
       <img src="proyect2.jpg" height="50%" width="100%"/>
+
+      <section class="galeria">
+        <h2>Galeria</h2>
+        <div class="imagens">
+            <img src="img/cafe-lavoura1.jpg" alt="Plantação de café">
+            <img src="img/cafe-colheita.jpg" alt="Colheita de café">
+            <img src="img/cafe-lavoura2.jpg" alt="Vista da lavoura">
+            <img src="img/cafe-pronto.jpg" alt="Café servido na xícara">
+            <img src="img/cafe-mesa.jpg" alt="Café na mesa com croissant">
+        </div>
+ 
+      <img src="proyect2.jpg" height="50%" width="100%"/>
+  
   
       
         <div class="hero__content container">   
